# lunet

./: .gitignore  .luacheckrc  AGENTS.md  CMakeLists.txt  EASYMEM_HTTP_C.md  LICENSE  Makefile  PAXE-CN.md  PAXE.md  README-CN.md  README.md  README_realworld.md  appveyor.yml  httpd.c.md  lunet-mysql-scm-1.rockspec  lunet-postgres-scm-1.rockspec  lunet-sqlite3-scm-1.rockspec  lunet-udp-scm-1.rockspec  lunet-unix-scm-1.rockspec  su_server.lua  summary.md  vcpkg.json  xmake.lua
.githooks/: pre-commit
.github/: release-template.md
.github/workflows/: build.yml  ci.yml  examples-test.yml  lint.yml
app/: db_config.lua  main.lua
app/handlers/: articles.lua  comments.lua  profiles.lua  tags.lua  users.lua
app/lib/: auth.lua  crypto.lua  db.lua  http.lua  sqlite.lua
bench/: AGENTS.md
build_mysql/: CMakeCache.txt  Makefile  compile_commands.json  lunet
build_postgres/: CMakeCache.txt  compile_commands.json  lunet
docs/: BADGES-CN.md  BADGES.md  DOWNSTREAM_WORKFLOW-CN.md  DOWNSTREAM_WORKFLOW.md  EASY_MEMORY_REPORT-CN.md  EASY_MEMORY_REPORT.md  GRAPHLITE-CN.md  GRAPHLITE.md  HTTPC-CN.md  HTTPC.md  LUACHECK_POLICY-CN.md  LUACHECK_POLICY.md  MEMORY_SAFETY_REPORT.md  SECURITY_ARCHITECTURE-CN.md  SECURITY_ARCHITECTURE.md  WORKFLOW-CN.md  WORKFLOW.md  XMAKE_INTEGRATION-CN.md  XMAKE_INTEGRATION.md
docs/ci/: lsan-leak-budget.md
examples/: 01_http_json.lua  02_http_routing.lua  03_db_sqlite3.lua  03_mcp_sse.lua  04_db_mysql.lua  05_db_postgres.lua  06_paxe_encryption.lua  07_paxe_stress.lua  08_graphlite_gql.lua  08_opt_graphlite.lua  corfu_su.lua  corfu_su_server.lua  corfu_su_smoke.lua  mcp_stdio_pure.lua
ext/easy_memory/: easy_memory.h  lunet_easy_memory.c
ext/httpc/: httpc.c  httpc.h
ext/mysql/: mysql.c  mysql.h
ext/postgres/: lunet_db_postgres.h  postgres.c
ext/sqlite3/: sqlite3.c
ext/udp/: udp.c
ext/unix/: lunet_unix.h  unix.c
include/: co.h  embed_scripts.h  embed_scripts_blob.h  fs.h  lunet_easy_memory.h  lunet_exports.h  lunet_lua.h  lunet_mem.h  lunet_signal.h  mysql.h  paxe.h  rt.h  runtime.h  signal.h  socket.h  stl.h  su.h  timer.h  trace.h  udp.h  work.h
opt/: README-CN.md  README.md
opt/graphlite/: graphlite.c  lunet_db_graphlite.h  lunet_graphlite.h
rocks/: lunet-core-scm-0.rockspec  lunet-mysql-scm-0.rockspec  lunet-postgres-scm-0.rockspec  lunet-sqlite3-scm-0.rockspec
spec/: db_connection_spec.lua  db_params_spec.lua  db_security_spec.lua  db_spec.lua  db_thread_spec.lua  http_security_spec.lua  http_spec.lua  httpc_spec.lua  json_spec.lua  lint_spec.lua  test_utils.lua
src/: co.c  embed_scripts.c  embed_scripts_blob.c  fs.c  lunet_cli.c  lunet_easy_memory.c  lunet_mem.c  lunet_module.c  main.c  mysql.c  paxe.c  rt.c  runtime_config.c  signal.c  socket.c  stl.c  su.c  timer.c  trace.c  udp.c
test/: AGENTS.md  ci_easy_memory_db_stress.lua  ci_easy_memory_lsan_regression.lua  ci_examples_compile.lua  ci_lsan_leak_budget.lua  httpc_alloc_bench.lua  lsan_suppressions.txt  opt_graphlite_example.lua  run_trace_test.sh  security_test.lua  simple_test.lua  smoke_mysql.lua  smoke_postgres.lua  smoke_sqlite3.lua  smoke_udp.lua  socket_listener_gc.lua  stack_bug_test.lua  stack_pollution_test.lua  stress_test.lua  trace_test.lua  udp_echo.lua  udp_echo_client.lua  udp_main_thread.lua  udp_queue_trace.lua  udp_sink.lua  udp_trace_test.lua  unix_socket_test.lua  unix_stress.lua
types/: lunet.lua
types/lunet/: fs.lua  mysql.lua  signal.lua  socket.lua  unix.lua
